# R2Framework

./: .env.example  .gitignore  ARCHITECTURE.md  REQUIREMENTS.md  config.py  main.py  pyproject.toml  settings.py
agent_tools/: __init__.py  database.py  hooks.py  image.py  links.py  models.py  utils.py
database/: general.py
database/agents/: models.py  uitars.py
database/populators/: __init__.py  agents.py  modules.py  routers.py  tools.py
database/provider/: models.py
database/tools/: models.py
gateway/: agent.py  enums.py  models.py  prompts.py  templates.py
modules/: models.py
modules/uierror/: README.md  agent-spec.md  agent.py  agent_utils.py  prompts.py  templates.py  uitars.py
tests/agent_tools/: test_image_tools.py  test_limit_tool_counts.py
tests/database/agents/: test_agent.py
tools/: links.py  models.py
