[project]
name = "r2framework"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi[standard]>=0.115.13",
    "psycopg2>=2.9.10",
    "sqlmodel>=0.0.24",
    "strands-agents[openai]>=0.1.9",
    "strands-agents-tools>=0.1.7",
    "pillow>=11.2.1",
    "pyautogui>=0.9.54",
]
