[project]
name = "r2framework"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi[standard]>=0.115.13",
    "psycopg2>=2.9.10",
    "sqlmodel>=0.0.24",
    "strands-agents[openai,otel]>=0.1.9",
    "strands-agents-tools>=0.1.7",
    "pillow>=11.2.1",
    "pyautogui>=0.9.54",
    "numpy>=2.2.6",
    "scikit-image>=0.25.2",
    "opencv-python>=4.12.0.88",
    "pytest>=9.0.1",
    "pytest-asyncio>=1.3.0",
]

[dependency-groups]
temp = [
    "opencv-python>=4.12.0.88",
    "scikit-image>=0.25.2",
]
